@@ -2,9 +2,10 @@
 
 	* v0.99d
 
-	Added node.js sample program (that uses librosie)
+	Added node.js sample program (uses librosie)
 
 	Updated csv.rpl to include pipe separator, and to work better
+	Added csv1.rpl for blog post on IBM developerWorks Open
 
 	Added doc/data (sample data directory)
 
